Fixed request id parsing